--- a/app/src/main/res/layout/activity_calc1.xml
+++ b/app/src/main/res/layout/activity_calc1.xml
@@ -18,7 +18,7 @@
             android:text="@string/label_op1" />
 
         <EditText
-            android:id="@+id/editTextNumberDecimal"
+            android:id="@+id/edit_op1"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:ems="10"
@@ -43,7 +43,7 @@
             android:text="@string/label_op2" />
 
         <EditText
-            android:id="@+id/editTextNumberDecimal5"
+            android:id="@+id/edit_op2"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:ems="10"
@@ -83,7 +83,7 @@
         android:background="?android:attr/listDivider" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_op"
         android:layout_width="205dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_doCalc" />
