--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -10,12 +11,15 @@
         android:id="@+id/button_2_1"
         android:layout_width="173dp"
         android:layout_height="wrap_content"
-        android:text="@string/btn_2_1" />
+        android:text="@string/btn_2_1"
+        app:icon="@drawable/svg_example"/>
 
 
     <Button
         android:id="@+id/button_2_2"
         android:layout_width="173dp"
         android:layout_height="wrap_content"
-        android:text="@string/btn_2_2" />
+        android:text="@string/btn_2_2"
+        app:icon="@drawable/svg_example"
+        app:iconGravity="end"/>
 </LinearLayout>
