--- a/app/src/main/res/layout/activity_calc2.xml
+++ b/app/src/main/res/layout/activity_calc2.xml
@@ -6,147 +6,211 @@
     android:layout_height="match_parent"
     tools:context=".assignment2.Calc2Activity">
 
-    <Button
-        android:id="@+id/btn_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_sqrt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_multi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_sub"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_point"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_div"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
-
-    <Button
-        android:id="@+id/btn_9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
+    <TextView
+        android:id="@+id/msg"
+        android:layout_width="403dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:gravity="end|bottom"
+        android:text="@string/cal2_tv_msg_default"
+        android:textColor="#000000"
+        android:textSize="33sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginStart="2dp"
+        android:text="@string/cal2_btn_1"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/msg"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_2"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="76dp"
+        android:text="@string/cal2_btn_2"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_1"
+        app:layout_constraintTop_toBottomOf="@+id/msg"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_3"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="76dp"
+        android:text="@string/cal2_btn_3"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_2"
+        app:layout_constraintTop_toBottomOf="@+id/msg"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_plus"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="76dp"
+        android:text="@string/cal2_btn_plus"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_multi"
+        app:layout_constraintTop_toBottomOf="@+id/msg"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_multi"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="76dp"
+        android:text="@string/cal2_btn_multi"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_3"
+        app:layout_constraintTop_toBottomOf="@+id/msg"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_4"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:text="@string/cal2_btn_4"
+        android:textSize="20sp"
+        android:layout_marginStart="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_1"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_5"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="10dp"
+        android:text="@string/cal2_btn_5"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_4"
+        app:layout_constraintTop_toBottomOf="@+id/btn_2"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_6"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/cal2_btn_6"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_5"
+        app:layout_constraintTop_toBottomOf="@+id/btn_3"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_sub"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="5dp"
+        android:text="@string/cal2_btn_sub"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_6"
+        app:layout_constraintTop_toBottomOf="@+id/btn_multi"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_div"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="7dp"
+        android:text="@string/cal2_btn_div"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_sub"
+        app:layout_constraintTop_toBottomOf="@+id/btn_plus"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_7"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:text="@string/cal2_btn_7"
+        android:textSize="20sp"
+        android:layout_marginStart="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_4"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_8"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="10dp"
+        android:text="@string/cal2_btn_8"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_7"
+        app:layout_constraintTop_toBottomOf="@+id/btn_5"
+        tools:ignore="MissingConstraints" />
+
+
+    <Button
+        android:id="@+id/btn_9"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/cal2_btn_9"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_8"
+        app:layout_constraintTop_toBottomOf="@+id/btn_6"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_sqrt"
+        android:layout_width="157dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="5dp"
+        android:text="@string/cal2_btn_sqrt"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_9"
+        app:layout_constraintTop_toBottomOf="@+id/btn_sub"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
+        android:layout_width="157dp"
+        android:layout_height="60dp"
+        android:text="@string/cal2_btn_0"
+        android:textSize="20sp"
+        android:layout_marginStart="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_7"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_point"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="11dp"
+        android:text="@string/cal2_btn_point"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_0"
+        app:layout_constraintTop_toBottomOf="@+id/btn_9"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_equals"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="171dp" />
+        android:layout_width="157dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="5dp"
+        android:text="@string/cal2_btn_equals"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_point"
+        app:layout_constraintTop_toBottomOf="@+id/btn_sqrt"
+        tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/msg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="135dp"
-        tools:layout_editor_absoluteY="59dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
