integrate calc backecnd

--- a/app/src/main/res/layout/activity_calc1.xml
+++ b/app/src/main/res/layout/activity_calc1.xml
@@ -91,7 +91,10 @@
 
     <TextView
         android:id="@+id/result_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_width="222dp"
+        android:layout_height="68dp"
+        android:textSize="55sp"
+        android:gravity="center"/>
+
 
 </LinearLayout>
