--- a/app/src/main/res/layout/activity_calc2.xml
+++ b/app/src/main/res/layout/activity_calc2.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
         android:gravity="end|bottom"
-        android:text="@string/cal2_tv_msg_default"
+
         android:textColor="#000000"
         android:textSize="33sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,12 +24,16 @@
     <EditText
         android:id="@+id/edit_advanced"
         android:layout_width="353dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="76dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:gravity="end|bottom"
+        android:textColor="#000000"
+        android:textSize="33sp"
+        android:hint="@string/cal2_tv_msg_default"
         android:ems="10"
         app:layout_constraintStart_toStartOf="parent"
-        android:gravity="right"
-        app:layout_constraintTop_toTopOf="@+id/msg"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
         android:inputType="text" />
 
