updating msg width size (#23)
* updating p2 ui

* updating a2 ui

* updating ui for rotation

* updating msg width size

* updating msg width size

--- a/app/src/main/res/layout/activity_calc2.xml
+++ b/app/src/main/res/layout/activity_calc2.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/msg"
-        android:layout_width="403dp"
+        android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
@@ -231,7 +231,8 @@
         android:layout_marginStart="11dp"
         android:text="@string/cal2_btn_ac"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_0"
+
+        app:layout_constraintStart_toEndOf="@+id/btn_del"
         app:layout_constraintTop_toBottomOf="@+id/btn_point"
         tools:ignore="MissingConstraints" />
 
@@ -242,7 +243,7 @@
         android:layout_marginStart="5dp"
         android:text="@string/cal2_btn_equals"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_point"
+        app:layout_constraintStart_toEndOf="@+id/btn_ac"
         app:layout_constraintTop_toBottomOf="@+id/btn_mod"
         tools:ignore="MissingConstraints" />
 
