--- a/app/src/main/res/layout/activity_calc2_land.xml
+++ b/app/src/main/res/layout/activity_calc2_land.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/msg"
-        android:layout_width="722dp"
+        android:layout_width="match_parent"
         android:layout_height="63dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
@@ -25,7 +25,7 @@
         android:id="@+id/btn_sqrt"
         android:layout_width="157dp"
         android:layout_height="60dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:text="@string/cal2_btn_sqrt"
         android:textSize="18sp"
@@ -65,7 +65,7 @@
         android:layout_marginTop="4dp"
         android:text="@string/cal2_btn_ac"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_0"
+        app:layout_constraintStart_toEndOf="@+id/btn_del"
         app:layout_constraintTop_toBottomOf="@+id/btn_point"
         tools:ignore="MissingConstraints" />
 
@@ -161,7 +161,7 @@
         android:layout_marginTop="4dp"
         android:text="@string/cal2_btn_equals"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_point"
+        app:layout_constraintStart_toEndOf="@+id/btn_ac"
         app:layout_constraintTop_toBottomOf="@+id/btn_mod"
         tools:ignore="MissingConstraints" />
 
