--- a/app/src/main/res/layout/activity_calc2.xml
+++ b/app/src/main/res/layout/activity_calc2.xml
@@ -23,7 +23,7 @@
 
     <EditText
         android:id="@+id/edit_advanced"
-        android:layout_width="353dp"
+        android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
