--- a/app/src/main/res/layout/activity_calc2_land.xml
+++ b/app/src/main/res/layout/activity_calc2_land.xml
@@ -22,7 +22,7 @@
 
     <EditText
         android:id="@+id/edit_advanced"
-        android:layout_width="722dp"
+        android:layout_width="match_parent"
         android:layout_height="63dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
