--- a/app/src/main/res/layout/activity_calc2.xml
+++ b/app/src/main/res/layout/activity_calc2.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".assignment2.Calc2Activity">
 
+
     <TextView
         android:id="@+id/msg"
         android:layout_width="match_parent"
@@ -13,12 +14,28 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
         android:gravity="end|bottom"
-        android:text="@string/cal2_tv_msg_default"
+
         android:textColor="#000000"
         android:textSize="33sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/edit_advanced"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:gravity="end|bottom"
+        android:textColor="#000000"
+        android:textSize="33sp"
+        android:hint="@string/cal2_tv_msg_default"
+        android:ems="10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        android:inputType="text" />
 
     <Button
         android:id="@+id/btn_1"
