--- a/app/src/main/res/layout/activity_calc2_land.xml
+++ b/app/src/main/res/layout/activity_calc2_land.xml
@@ -13,12 +13,29 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
         android:gravity="end|bottom"
-        android:text="@string/cal2_tv_msg_default"
+
         android:textColor="#000000"
         android:textSize="33sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/edit_advanced"
+        android:layout_width="match_parent"
+        android:layout_height="63dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:gravity="end|bottom"
+        android:text="@string/cal2_tv_msg_default"
+        android:textColor="#000000"
+        android:textSize="33sp"
+        android:hint="@string/cal2_tv_msg_default"
+        android:ems="10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        android:inputType="text" />
 
 
     <Button
