--- a/app/src/main/res/layout/activity_calc2.xml
+++ b/app/src/main/res/layout/activity_calc2.xml
@@ -6,13 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".assignment2.Calc2Activity">
 
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/constraintLayout1"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textColor="#409EFF"-->
+<!--            android:textSize="33sp"-->
+<!--            android:text=""-->
+<!--            android:gravity="center"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+<!--        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"-->
+        
 
 
         <TextView
@@ -22,7 +44,6 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="16dp"
             android:gravity="end|bottom"
-
             android:textColor="#000000"
             android:textSize="33sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,17 +69,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
         <Button
             android:id="@+id/btn_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="70dp"
             android:text="@string/cal2_btn_1"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,8 +88,8 @@
             android:id="@+id/btn_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="70dp"
             android:text="@string/cal2_btn_2"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_1"
@@ -80,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="70dp"
             android:text="@string/cal2_btn_3"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_2"
@@ -101,7 +121,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="70dp"
             android:text="@string/cal2_btn_multi"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_3"
@@ -111,7 +131,7 @@
             android:id="@+id/btn_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="4dp"
             android:text="@string/cal2_btn_4"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -161,7 +181,7 @@
             android:id="@+id/btn_7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="4dp"
             android:text="@string/cal2_btn_7"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -202,7 +222,7 @@
             android:id="@+id/btn_0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="4dp"
             android:text="@string/cal2_btn_0"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -232,7 +252,7 @@
             android:id="@+id/btn_del"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="4dp"
             android:text="@string/cal2_btn_del"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
