--- a/app/src/main/res/layout-land/activity_calc1.xml
+++ b/app/src/main/res/layout-land/activity_calc1.xml
@@ -6,20 +6,34 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="194dp"
+        android:layout_width="318dp"
         android:layout_height="74dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/label_op1" />
 
         <EditText
             android:id="@+id/edit_op1"
-            android:layout_width="150dp"
+            android:layout_width="109dp"
+            android:layout_height="match_parent"
+            android:ems="10"
+            android:inputType="numberDecimal" />
+
+        <TextView
+            android:id="@+id/textView34"
+            android:layout_width="39dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/label_op2" />
+
+        <EditText
+            android:id="@+id/edit_op2"
+            android:layout_width="108dp"
             android:layout_height="match_parent"
             android:ems="10"
             android:inputType="numberDecimal" />
@@ -30,26 +44,6 @@
         android:layout_height="wrap_content" />
 
 
-    <LinearLayout
-        android:layout_width="195dp"
-        android:layout_height="73dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView34"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/label_op2" />
-
-        <EditText
-            android:id="@+id/edit_op2"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:ems="10"
-            android:inputType="numberDecimal" />
-    </LinearLayout>
-
     <Space
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -57,7 +51,7 @@
 
     <LinearLayout
         android:layout_width="195dp"
-        android:layout_height="82dp"
+        android:layout_height="65dp"
         android:orientation="horizontal">
 
         <TextView
@@ -70,14 +64,8 @@
         <Spinner
             android:id="@+id/spinnerOperator"
             android:layout_width="111dp"
-            android:layout_height="match_parent" />
+            android:layout_height="65dp" />
     </LinearLayout>
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="?android:attr/listDivider" />
 
     <Button
         android:id="@+id/btn_op"
@@ -85,14 +73,10 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_doCalc" />
 
-    <Space
-        android:layout_width="221dp"
-        android:layout_height="27dp" />
-
     <TextView
         android:id="@+id/result_text"
         android:layout_width="224dp"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="55sp" />
 
