--- a/app/src/main/res/layout/activity_calc1.xml
+++ b/app/src/main/res/layout/activity_calc1.xml
@@ -6,8 +6,8 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="89dp"
+        android:layout_width="318dp"
+        android:layout_height="74dp"
         android:orientation="horizontal">
 
         <TextView
