reduce pain in testing

--- a/app/src/main/res/layout/activity_fclogin.xml
+++ b/app/src/main/res/layout/activity_fclogin.xml
@@ -35,6 +35,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginRight="30dp"
             android:hint="@string/fc_name"
+            android:text="admin"
             android:textSize="18dp" />
 
         <EditText
@@ -44,6 +45,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="25dp"
             android:layout_marginRight="30dp"
+            android:text="123456"
             android:hint="@string/fc_psw"
             android:textSize="18dp" />
 
