constraint layout of temp

--- a/app/src/main/res/layout/activity_temp_conv.xml
+++ b/app/src/main/res/layout/activity_temp_conv.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android = "http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,9 +11,10 @@
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="210dp"
         android:orientation="vertical"
-        android:padding="10dip">
+        android:padding="10dip"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textViewC"
@@ -28,7 +29,7 @@
 
         <SeekBar
             android:id="@+id/seekBarC"
-            android:layout_width="200dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="25dp"
@@ -55,12 +56,16 @@
 
         android:layout_width="match_parent"
         android:layout_height="210dp"
+        android:layout_marginBottom="311dp"
         android:orientation="vertical"
-        android:padding="10dip">
+        android:padding="10dip"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="16dp">
+
 
         <SeekBar
             android:id="@+id/seekBarF"
-            android:layout_width="200dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
@@ -98,10 +103,14 @@
         android:layout_width="wrap_content"
         android:layout_height="82dp"
         android:layout_gravity="center"
-        android:layout_marginTop="40dp"
+        android:layout_marginBottom="153dp"
         android:text=""
         android:textColor="@color/black"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
