--- a/app/src/main/res/layout/activity_hang_man.xml
+++ b/app/src/main/res/layout/activity_hang_man.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".assignment4.HangManActivity">
+    tools:context=".assignment4.hangman.HangManActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
