image and first layout

--- a/app/src/main/res/layout/activity_hang_man.xml
+++ b/app/src/main/res/layout/activity_hang_man.xml
@@ -1,9 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.fragment.app.FragmentContainerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.cs501.cs501app.assignment4.hangman.ChooseLetterFragment"
-    tools:context=".assignment4.hangman.HangManActivity" />
+    tools:context=".assignment4.hangman.HangManActivity">
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/hangman_hint"
+        android:name="com.cs501.cs501app.assignment4.hangman.HintFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+<!--        app:layout_constraintTop_toBottomOf="@id/hangman_letters"/>-->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/hangman_letters"
+        android:name="com.cs501.cs501app.assignment4.hangman.ChooseLetterFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/hangman_picture"
+        android:name="com.cs501.cs501app.assignment4.hangman.ImageFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
