--- a/app/src/main/res/layout/activity_hang_man.xml
+++ b/app/src/main/res/layout/activity_hang_man.xml
@@ -13,6 +13,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/hangman_input"
+        android:name="com.cs501.cs501app.assignment4.hangman.InputFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/hangman_hint"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 <!--        app:layout_constraintTop_toBottomOf="@id/hangman_letters"/>-->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/hangman_letters"
