--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -9,6 +9,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="userinputuserinput" />
+        android:text="______"
+        android:id="@+id/hangman_input_text"
+android:gravity="center"
+        android:textSize="50sp"
+
+        />
 
 </FrameLayout>
